--- a/client/pom.xml
+++ b/client/pom.xml
@@ -20,6 +20,11 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-shared-utils</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
