Improve chunk tesselation time

--- a/launcher/openminer/options.cfg
+++ b/launcher/openminer/options.cfg
@@ -4,8 +4,8 @@ brightness = 1.0
 enable_fog = true
 
 [display]
-vsync = true
-fps_limit = 75.0
+vsync = false
+fps_limit = -1.0
 fullscreen = false
 
 [level]
