--- a/run/options.cfg
+++ b/run/options.cfg
@@ -4,7 +4,7 @@ brightness = 1.0
 enable_fog = true
 
 [display]
-vsync = false
+vsync = true
 fps_limit = -1.0
 fullscreen = false
 
@@ -15,12 +15,12 @@ load_distance = 16
 show_first_person_model = false
 
 [mouse]
-sensitivity = 0.25
+sensitivity = 0.4
 
 [keyboard]
 forward = W
 left = A
-back = S
+backward = S
 right = D
 jump = SPACE
 sprint = LCTRL
